assets/css/core/base/_form.scss
//-------------------------------------------------------------------------------------------
// Mercer Evolution - Core v2.6 - Base Form Partial
// DATE - January 13, 2015
// AUTHOR - Doug Fraize, Matthew Holmes, Doug Richar, Vinod Bhatt
//-------------------------------------------------------------------------------------------

//
// @variables
//
$evo-base-input-shadow-color: $gray-lighter !default;
$evo-input-focus-border-color: $topaz-mid !default;


@if $use-forms == true{

	form					{
		.button					{
								@media #{$small-up}		{margin-top: 3px;}
								@media #{$medium-up}	{margin-top: 8px;}
								@media #{$large-up}		{margin-top: 13px;}
								}
							}

	input[type="text"],
	select,
	textarea				{
							background-color: $white;
							@include block-glowing-effect(
								$glowing-effect-color: $evo-input-focus-border-color
								);
		&:hover					{
								background-color: $white;
								border-color: $topaz-mid;
								}
		&:focus					{outline: 0;}
							}



	// GLOBAL FORM ELEMENTS
	input[type="text"],
	input[type="password"],
	input[type="datetime"],
	input[type="datetime-local"],
	input[type="date"],
	input[type="month"],
	input[type="time"],
	input[type="week"],
	input[type="number"],
	input[type="email"],
	input[type="url"],
	input[type="search"],
	input[type="tel"],
	input[type="color"],
	select,
	textarea										{
													@include border-radius($global-radius);
													@include box-shadow(inset 0, 1px, 1px, $evo-base-input-shadow-color);
													font-family: $evo-font-regular-stack;
													}

	label											{font-family: $evo-font-medium-stack;}

	input[type="hidden"]							{display:none;}

	input[type="radio"],
	input[type="checkbox"]							{
													margin-bottom: rem-calc(18);
													position: relative;
													}

	input[type="radio"]								{top: rem-calc(1.4);}
	input[type="checkbox"]							{top: rem-calc(1.4);}

	input[type="radio"] + label,
	input[type="checkbox"] + label					{margin-left: rem-calc(.5);}


	//=== MEDIA QUERIES =========================================================================

	// SMALL MEDIA QUERY RANGE - 0 - 640px
	@if $use-small-only-mediaquery == true {
		
		@media #{$small-only} {

			

		}

	}//endif

	// MEDIUM MEDIA QUERY RANGE AND UP - 641px +
	@if $use-medium-up-mediaquery == true {
		
		@media #{$medium-up} {



		}
		
	}// endif

}//endif

